<resources>
    <string name="app_name">Bit Titans</string>
    <string name="start_but">Start</string>
    <string name="about_but">About</string>
    <string name="menu_description">rock_background</string>
    <string name="level_1">Level 1</string>
    <string name="level__2">Level 2</string>
    <string name="level_2">Level 2</string>
    <string name="levels">Map Select</string>
    <string name="level_3">Level 3</string>
    <string name="level__3">Level 3</string>
    <string name="level__1">Level 1</string>
    <string name="level_4">Level 4</string>
    <string name="level__4">Level 4</string>
    <string name="level_num">                 1 - 5</string>
    <string name="load">Load</string>
</resources>
